query validation testing and case role type adding when missing